libgo/libgolib-linux-amd64.h

typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
extern void RegisterPort(long long int port);
extern void UnregisterPort(void);
extern void StopTask(long long int taskID, long long int port);
// ---- Bridge init to call bridge.InitDartApi(...) from Dart ----
extern void BridgeInit(void* api);
// ---- synchronous operations ----
extern void Move(int x, int y, long long int port);
extern void MoveRelative(int x, int y, long long int port);
extern void Click(char* btn, int dbl, long long int port);
extern void Toggle(char* btn, char* dir, long long int port);
extern void Scroll(int x, int y, long long int port);
extern void ScrollDir(int amount, char* dir, long long int port);
extern void GetLocation(long long int port);
extern void SetMouseSleep(int ms, long long int port);
extern void MilliSleep(int ms, long long int port);
extern long long int MoveSmoothStart(int x, int y, long long int port);
extern long long int DragSmoothStart(int x, int y, long long int port);
extern long long int ScrollSmoothStart(int x, int y, long long int port);
extern void TypeStr(char* text, long long int port);
// allows calling robotgo.TypeStr(s, int1, int2) (some usages pass additional ints)
extern void TypeStrWithInts(char* text, int arg1, int arg2, long long int port);
extern void Sleep(int seconds, long long int port);
extern void SetKeySleep(int ms, long long int port);
// mods: comma separated modifiers string like "alt,cmd" or NULL for none
extern void KeyTap(char* key, char* mods, long long int port);
// modsJson: JSON array string like '["alt","cmd"]'
extern void KeyTapArr(char* key, char* modsJson, long long int port);
// direction: NULL for default, or "up" / "down"
extern void KeyToggle(char* key, char* direction, long long int port);
extern void WriteAll(char* text, long long int port);
extern void ReadAll(long long int port);
extern long long int TypeStrStart(char* text, long long int port);
extern void GetPixelColor(int x, int y, long long int port);
extern void GetScreenSize(long long int port);
extern void CaptureScreenSave(int x, int y, int w, int h, char* path, long long int port);