lib/bridges/screengot_binding.dart

// ignore_for_file: unused_element, unused_field

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for the ScreenGot native library.
class ScreenGot {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  ScreenGot(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  ScreenGot.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int _GoStringLen(_GoString_ s) {
    return __GoStringLen(s);
  }

  late final __GoStringLenPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(_GoString_)>>(
        '_GoStringLen',
      );
  late final __GoStringLen = __GoStringLenPtr
      .asFunction<int Function(_GoString_)>();

  ffi.Pointer<ffi.Char> _GoStringPtr(_GoString_ s) {
    return __GoStringPtr(s);
  }

  late final __GoStringPtrPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(_GoString_)>>(
        '_GoStringPtr',
      );
  late final __GoStringPtr = __GoStringPtrPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(_GoString_)>();

  void RegisterPort(int port) {
    return _RegisterPort(port);
  }

  late final _RegisterPortPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.LongLong)>>(
        'RegisterPort',
      );
  late final _RegisterPort = _RegisterPortPtr.asFunction<void Function(int)>();

  void UnregisterPort() {
    return _UnregisterPort();
  }

  late final _UnregisterPortPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('UnregisterPort');
  late final _UnregisterPort = _UnregisterPortPtr.asFunction<void Function()>();

  void StopTask(int taskID, int port) {
    return _StopTask(taskID, port);
  }

  late final _StopTaskPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.LongLong, ffi.LongLong)>
      >('StopTask');
  late final _StopTask = _StopTaskPtr.asFunction<void Function(int, int)>();

  void BridgeInit(ffi.Pointer<ffi.Void> api) {
    return _BridgeInit(api);
  }

  late final _BridgeInitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'BridgeInit',
      );
  late final _BridgeInit =
      _BridgeInitPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void Move(int x, int y, int port) {
    return _Move(x, y, port);
  }

  late final _MovePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int, ffi.LongLong)>
      >('Move');
  late final _Move = _MovePtr.asFunction<void Function(int, int, int)>();

  void MoveRelative(int x, int y, int port) {
    return _MoveRelative(x, y, port);
  }

  late final _MoveRelativePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int, ffi.LongLong)>
      >('MoveRelative');
  late final _MoveRelative =
      _MoveRelativePtr.asFunction<void Function(int, int, int)>();

  void Click(ffi.Pointer<ffi.Char> btn, int dbl, int port) {
    return _Click(btn, dbl, port);
  }

  late final _ClickPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Int, ffi.LongLong)
        >
      >('Click');
  late final _Click =
      _ClickPtr.asFunction<void Function(ffi.Pointer<ffi.Char>, int, int)>();

  void Toggle(ffi.Pointer<ffi.Char> btn, ffi.Pointer<ffi.Char> dir, int port) {
    return _Toggle(btn, dir, port);
  }

  late final _TogglePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('Toggle');
  late final _Toggle =
      _TogglePtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  void Scroll(int x, int y, int port) {
    return _Scroll(x, y, port);
  }

  late final _ScrollPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int, ffi.LongLong)>
      >('Scroll');
  late final _Scroll = _ScrollPtr.asFunction<void Function(int, int, int)>();

  void ScrollDir(int amount, ffi.Pointer<ffi.Char> dir, int port) {
    return _ScrollDir(amount, dir, port);
  }

  late final _ScrollDirPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int, ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('ScrollDir');
  late final _ScrollDir =
      _ScrollDirPtr.asFunction<
        void Function(int, ffi.Pointer<ffi.Char>, int)
      >();

  void GetLocation(int port) {
    return _GetLocation(port);
  }

  late final _GetLocationPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.LongLong)>>(
        'GetLocation',
      );
  late final _GetLocation = _GetLocationPtr.asFunction<void Function(int)>();

  void SetMouseSleep(int ms, int port) {
    return _SetMouseSleep(ms, port);
  }

  late final _SetMouseSleepPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.LongLong)>>(
        'SetMouseSleep',
      );
  late final _SetMouseSleep =
      _SetMouseSleepPtr.asFunction<void Function(int, int)>();

  void MilliSleep(int ms, int port) {
    return _MilliSleep(ms, port);
  }

  late final _MilliSleepPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.LongLong)>>(
        'MilliSleep',
      );
  late final _MilliSleep = _MilliSleepPtr.asFunction<void Function(int, int)>();

  int MoveSmoothStart(int x, int y, int port) {
    return _MoveSmoothStart(x, y, port);
  }

  late final _MoveSmoothStartPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.LongLong Function(ffi.Int, ffi.Int, ffi.LongLong)
        >
      >('MoveSmoothStart');
  late final _MoveSmoothStart =
      _MoveSmoothStartPtr.asFunction<int Function(int, int, int)>();

  int DragSmoothStart(int x, int y, int port) {
    return _DragSmoothStart(x, y, port);
  }

  late final _DragSmoothStartPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.LongLong Function(ffi.Int, ffi.Int, ffi.LongLong)
        >
      >('DragSmoothStart');
  late final _DragSmoothStart =
      _DragSmoothStartPtr.asFunction<int Function(int, int, int)>();

  int ScrollSmoothStart(int x, int y, int port) {
    return _ScrollSmoothStart(x, y, port);
  }

  late final _ScrollSmoothStartPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.LongLong Function(ffi.Int, ffi.Int, ffi.LongLong)
        >
      >('ScrollSmoothStart');
  late final _ScrollSmoothStart =
      _ScrollSmoothStartPtr.asFunction<int Function(int, int, int)>();

  void TypeStr(ffi.Pointer<ffi.Char> text, int port) {
    return _TypeStr(text, port);
  }

  late final _TypeStrPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('TypeStr');
  late final _TypeStr =
      _TypeStrPtr.asFunction<void Function(ffi.Pointer<ffi.Char>, int)>();

  void TypeStrWithInts(
    ffi.Pointer<ffi.Char> text,
    int arg1,
    int arg2,
    int port,
  ) {
    return _TypeStrWithInts(text, arg1, arg2, port);
  }

  late final _TypeStrWithIntsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Int,
            ffi.LongLong,
          )
        >
      >('TypeStrWithInts');
  late final _TypeStrWithInts =
      _TypeStrWithIntsPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int, int, int)
      >();

  void Sleep(int seconds, int port) {
    return _Sleep(seconds, port);
  }

  late final _SleepPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.LongLong)>>(
        'Sleep',
      );
  late final _Sleep = _SleepPtr.asFunction<void Function(int, int)>();

  void SetKeySleep(int ms, int port) {
    return _SetKeySleep(ms, port);
  }

  late final _SetKeySleepPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.LongLong)>>(
        'SetKeySleep',
      );
  late final _SetKeySleep =
      _SetKeySleepPtr.asFunction<void Function(int, int)>();

  void KeyTap(ffi.Pointer<ffi.Char> key, ffi.Pointer<ffi.Char> mods, int port) {
    return _KeyTap(key, mods, port);
  }

  late final _KeyTapPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('KeyTap');
  late final _KeyTap =
      _KeyTapPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  void KeyTapArr(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> modsJson,
    int port,
  ) {
    return _KeyTapArr(key, modsJson, port);
  }

  late final _KeyTapArrPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('KeyTapArr');
  late final _KeyTapArr =
      _KeyTapArrPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  void KeyToggle(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> direction,
    int port,
  ) {
    return _KeyToggle(key, direction, port);
  }

  late final _KeyTogglePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('KeyToggle');
  late final _KeyToggle =
      _KeyTogglePtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  void WriteAll(ffi.Pointer<ffi.Char> text, int port) {
    return _WriteAll(text, port);
  }

  late final _WriteAllPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('WriteAll');
  late final _WriteAll =
      _WriteAllPtr.asFunction<void Function(ffi.Pointer<ffi.Char>, int)>();

  void ReadAll(int port) {
    return _ReadAll(port);
  }

  late final _ReadAllPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.LongLong)>>('ReadAll');
  late final _ReadAll = _ReadAllPtr.asFunction<void Function(int)>();

  int TypeStrStart(ffi.Pointer<ffi.Char> text, int port) {
    return _TypeStrStart(text, port);
  }

  late final _TypeStrStartPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.LongLong Function(ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('TypeStrStart');
  late final _TypeStrStart =
      _TypeStrStartPtr.asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  void GetPixelColor(int x, int y, int port) {
    return _GetPixelColor(x, y, port);
  }

  late final _GetPixelColorPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int, ffi.LongLong)>
      >('GetPixelColor');
  late final _GetPixelColor =
      _GetPixelColorPtr.asFunction<void Function(int, int, int)>();

  void GetScreenSize(int port) {
    return _GetScreenSize(port);
  }

  late final _GetScreenSizePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.LongLong)>>(
        'GetScreenSize',
      );
  late final _GetScreenSize =
      _GetScreenSizePtr.asFunction<void Function(int)>();

  void CaptureScreenSave(
    int x,
    int y,
    int w,
    int h,
    ffi.Pointer<ffi.Char> path,
    int port,
  ) {
    return _CaptureScreenSave(x, y, w, h, path, port);
  }
